<resources>
    <string name="app_name">SkillHubApp</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_to_skillhub">Welcome to SkillHub</string>
    <string name="choose_how_you_want_to_explore_the_platform">Choose how you want to explore the platform</string>
    <string name="icon">🎓</string>
    <string name="student_portal">Student Portal</string>
    <string name="browse_thousands_of_courses">• Browse thousands of courses</string>
    <string name="track_your_learning_progress">• Track your learning progress</string>
    <string name="get_personalized_recommendations">• Get personalized recommendations</string>
    <string name="continue_as_student">Continue as Student</string>
    <string name="ic2">👤</string>
    <string name="instructor_portal">Instructor Portal</string>
    <string name="create_and_manage_courses">• Create and manage courses</string>
    <string name="track_revenue_and_analytics">• Track revenue and analytics</string>
    <string name="engage_with_your_students">• Engage with your students</string>
    <string name="continue_as_instructor">Continue as Instructor</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="log_in">Log In</string>
    <string name="wel">Welcome!</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="email">Email :</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="todo">TODO</string>
    <string name="password">Password :</string>
    <string name="lock">lock</string>
    <string name="pw">Password</string>
    <string name="eye">eye</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="li">Log In</string>
    <string name="enter_your_registered_email">registered_email</string>
    <string name="send_reset_link">send reset link</string>
    <string name="Password">Password</string>
    <string name="logo">Logo</string>
    <string name="logo_2">logo_2</string>
    <string name="wlm">Welcome !</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_your_details_to_signup">Enter your details to signup</string>
    <string name="first_name">First Name :</string>
    <string name="fname">First name</string>
    <string name="last_name">Last Name :</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">confirm</string>
    <string name="pwd">Password</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="pd">Password</string>
    <string name="psd">Password :</string>
    <string name="your_email">Enter your email</string>
    <string name="eml">Email :</string>
    <string name="lastname">Last name</string>
    <string name="search_for_courses">Search for Courses...</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="srch">srch</string>
    <string name="my_courses">My Courses</string>
    <string name="browse">Browse</string>
    <string name="profile">profile</string>
    <string name="notify">notify</string>
    <string name="shlogo">shlogo</string>
    <string name="resume">Resume</string>
    <string name="_50">50%</string>
    <string name="progress">Progress</string>
    <string name="angela_yu">Angela Yu</string>
    <string name="web_development">Web Development</string>
    <string name="image">image</string>
    <string name="Web_development">Web Development</string>
    <string name="_35">35%</string>
    <string name="UI_UX_Design">UI/UX Design</string>
    <string name="c1">c1</string>
    <string name="web_development_bootcamp">Web Development Bootcamp</string>
    <string name="stdimg">stdimg</string>
    <string name="_1000_students">1000 students</string>
    <string name="star">star</string>
    <string name="_4_5">4.5</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_course">My Courses</string>
    <string name="welcome_back_angela">Welcome Back Angela!</string>
    <string name="here_s_what_s_happening_with_your_courses">Here’s what’s happening with your courses</string>
    <string name="create_new_course">Create New Course</string>
    <string name="your_courses">Your Courses</string>
    <string name="viewall">View All</string>
    <string name="_4_0">4.0</string>
    <string name="_800_students">800 students</string>
    <string name="_500_students">500 students</string>
    <string name="_4_3">4.3</string>
    <string name="delete_account">Delete Account</string>
    <string name="learner">Learner</string>
    <string name="learner_gmail_com">learner@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="right">right</string>
    <string name="payment">payment</string>
    <string name="payments">Payments</string>
    <string name="log_out">Log Out</string>
    <string name="angela">Angela</string>
    <string name="editprofile">Edit Profile</string>
    <string name="angela_gmail_com">angela@gmail.com</string>
    <string name="changepassword">Change Password</string>
    <string name="payments2">Payments</string>
    <string name="log_out2">Log Out</string>
    <string name="delete_account2">Delete Account</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="_17">+17%</string>
    <string name="_10_000">$10,000</string>
    <string name="courses_published">Courses published</string>
    <string name="_7">7</string>
    <string name="payment_portal">Payment Portal</string>
    <string name="enter_your_details_to_finish_payment">Enter your details to finish payment</string>
    <string name="name_on_card">Name on Card :</string>
    <string name="full_name">Full Name</string>
    <string name="card_number">Card Number :</string>
    <string name="xxxx_xxxx_xxxx_xxxx">xxxx xxxx xxxx xxxx</string>
    <string name="exp_date">Exp Date :</string>
    <string name="mm_yy">mm/yy</string>
    <string name="cvv">CVV :</string>
    <string name="zip_code">Zip Code :</string>
    <string name="zip_code1">Zip Code</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="cvv2">...</string>
</resources>
