<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/courseThumb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/c1"
            android:scaleType="centerCrop"
            tools:src="@drawable/course_i2" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/webdevelopment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_development_bootcamp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/UI_UX_Design" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/stdimg"
                    android:src="@drawable/ic_students"
                    android:tint="#777" />

                <TextView
                    android:id="@+id/courseStudents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/_800_students"
                    android:textColor="#757575" />

            </LinearLayout>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="#FFA500" />

            <TextView
                android:id="@+id/courseRating"
                android:layout_width="32dp"
                android:layout_height="20dp"
                android:layout_marginStart="6dp"
                android:text="@string/_4_0"
                android:textColor="#757575" />

        </LinearLayout>

        <Button
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#2563EB"
            android:text="@string/edit"
            android:textColor="#FFFFFF" />


        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/outline"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/eye"
                android:src="@drawable/ic_eye"
                android:tint="#2563EB"/>

            <TextView
                android:layout_width="36dp"
                android:layout_height="20dp"
                android:layout_marginStart="6dp"
                android:text="@string/view"
                android:textColor="#2563EB"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>