<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top Navigation -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/Logo"
                android:adjustViewBounds="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/notify"
                android:src="@drawable/ic_notification"
                android:tint="#000"
                android:layout_marginEnd="16dp" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_profile"
                android:tint="#6C4DFE" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:background="#F5F5F5"
            android:padding="32dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_profile2"
                android:tint="#6C4DFE" />

            <TextView
                android:text="@string/learner"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_height="25dp"
                android:layout_width="80dp"/>

            <TextView
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:text="@string/learner_gmail_com"
                android:textColor="#616161"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#6C4DFE"
                android:text="@string/edit_profile"
                android:textColor="#FFFFFF" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="#F8F8F8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:contentDescription="@string/lock"
                        android:src="@drawable/ic_lock"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:tint="#333" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/change_password"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:contentDescription="@string/right"
                        android:src="@drawable/ic_arrow_right"
                        android:layout_width="24dp"
                        android:layout_height="24dp" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_marginTop="12dp"
                    android:background="#F8F8F8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:contentDescription="@string/payment"
                        android:src="@drawable/ic_payment"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:tint="#333" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/payments"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:contentDescription="@string/right"
                        android:src="@drawable/ic_arrow_right"
                        android:layout_width="24dp"
                        android:layout_height="24dp" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/log_out"
                    android:textColor="#B71C1C"
                    android:backgroundTint="#FFFFFF"
                    android:layout_marginTop="16dp"
                    android:strokeColor="#B71C1C" />

                <!-- Delete Account -->
                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/delete_account"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#C62828"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>