<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="#F5F5F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_portal"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginTop="10dp"
            android:textColor="#000" />

        <!-- Payment Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:layout_marginTop="24dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="@string/enter_your_details_to_finish_payment"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                <!-- NAME -->
                <TextView
                    android:text="@string/name_on_card"
                    android:textSize="15sp"
                    android:textColor="#555"
                    android:layout_marginBottom="6dp"
                    android:layout_height="20dp"
                    android:layout_width="115dp"/>

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="400dp"
                    android:layout_height="48dp"
                    android:autofillHints="name"
                    android:background="@drawable/input_bg"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:hint="@string/full_name" />


                <TextView
                    android:text="@string/card_number"
                    android:textSize="15sp"
                    android:textColor="#555"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:layout_height="20dp"
                    android:layout_width="115dp"/>

                <EditText
                    android:id="@+id/edtCardNumber"
                    android:layout_width="400dp"
                    android:layout_height="48dp"
                    android:autofillHints="creditCardNumber"
                    android:background="@drawable/input_bg"
                    android:padding="12dp"
                    android:hint="@string/xxxx_xxxx_xxxx_xxxx"
                    android:inputType="number" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/exp_date"
                            android:textColor="#555"
                            android:textSize="15sp"
                            android:layout_marginBottom="6dp"
                            android:layout_height="20dp"
                            android:layout_width="70dp"/>

                        <EditText
                            android:id="@+id/edtExpDate"
                            android:layout_width="150dp"
                            android:layout_height="48dp"
                            android:autofillHints="creditCardExpirationDate"
                            android:background="@drawable/input_bg"
                            android:padding="12dp"
                            android:hint="@string/mm_yy"
                            android:inputType="datetime" />

                    </LinearLayout>

                    <View
                        android:layout_width="12dp"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/cvv"
                            android:textColor="#555"
                            android:textSize="15sp"
                            android:layout_marginBottom="6dp"
                            android:layout_height="20dp"
                            android:layout_width="70dp"/>

                        <EditText
                            android:id="@+id/edtCVV"
                            android:layout_width="100dp"
                            android:layout_height="48dp"
                            android:autofillHints="creditCardSecurityCode"
                            android:background="@drawable/input_bg"
                            android:padding="12dp"
                            android:hint="@string/cvv2"
                            android:inputType="numberPassword" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/zip_code"
                    android:textColor="#555"
                    android:textSize="15sp"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/edtZip"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:autofillHints="postalCode"
                    android:background="@drawable/input_bg"
                    android:padding="12dp"
                    android:hint="@string/zip_code1"
                    android:inputType="number" />


                <Button
                    android:id="@+id/btnConfirmPayment"
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:text="@string/confirm_payment"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#0A1A2F"
                    android:layout_marginTop="26dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>